--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,20 +1,108 @@
 <header class="header">
-    <nav>
-        <svg width="32" height="22">
+    <div class="header-nav container  ">
+    <nav class="header-nav">
+        <svg width="19" height="19">
             <use href="../img/icons.svg#icon-logo">
+            </use>
+        </svg>
+        <p class="logo-text">
+            thewatchspot  
+        </p>
+        <ul class=" site-nav list">
+            <li> <a href="#ABOUT US">ABOUT US</a></li>
+            <li> <a href="#CATALOG">CATALOG</a></li>
+            <li> <a href="#SALE">SALE</a></li>
+        </ul>
+    </nav>
+    <button data-menu-open type="button" class="mobile-menu-open ">
+        <svg class="mobile-menu-open-icon" width="24" height="24">
+          <use href="../img/icons.svg#icon-mobile-menu"></use>
+        </svg>
+      </button>
+    <address class="header-address header-nav list">
+            <a class="button-address" href="tel:+380684439426">+380 (68) 443-94-26</a>
+    </address>
+</div>
+<div data-menu class=" mobile-menu data-menu">
+    <div class=" mobile-menu-container">
+       <div  class=" header-nav-mobile">
+        <svg width="19" height="19">
+            <use href="../img/icons.svg#icon-logo">
+            </use>
+        </svg>
+        <p class="logo-text">
+            thewatchspot  
+        </p>
+      <button data-menu-close type="button" class="mobile-close">
+        <svg width="24" height="24">
+          <use href="../img/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+    </div>
+        <nav>
+          <ul class="site-nav-mobile list">
+            <li> <a class="link" href="#ABOUT US">ABOUT US</a></li>
+            <li> <a class="link" href="#CATALOG">CATALOG</a></li>
+            <li> <a class="link" href="#SALE">SALE</a></li>
+          </ul>
+        </nav>
+      </div>
+  </div>
+</header>
 
+<!-- <header class="header">
+    <div class="header-container container header-nav header-nav-mobile"">
+      <nav class="header-nav">
+        <svg width="19" height="19">
+            <use href="../img/icons.svg#icon-logo">
             </use>
         </svg>
         <p>
             thewatchspot  
         </p>
-        <ul>
-            <li> <a href="./index.html">ABOUT US</a></li>
-            <li> <a href="./index.html">CATALOG</a></li>
-            <li> <a href="./index.html">SALE</a></li>
+        <ul class="site-nav list">
+          <li class="item"><a href="#ABOUT US" class="link  ">ABOUT US</a></li>
+          <li class="item"><a href="#CATALOG" class="link ">CATALOG</a></li>
+          <li class="item"><a href="#SALE" class="link">SALE</a></li>
         </ul>
-    </nav>
-    <address>
-            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
-    </address>
-</header>
+      </nav>
+      <button type="button" class="mobile-menu-open js-open-menu">
+        <svg class="mobile-menu-open-icon" width="32" height="22">
+          <use href="./images/SVG/symbol-defs.svg#burger-icon"></use>
+        </svg>
+      </button>
+      <address class="list navigation-nav header-nav">
+
+             <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+        </address>
+    </div>
+    <div class=" mobile-menu js-menu-container">
+      <div class=" mobile-menu-container">
+        <button type="button" class="modal-button js-close-menu">
+          <svg width="8" height="8">
+            <use href="./images/SVG/symbol-defs.svg#close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+        <div>
+          <nav>
+            <ul class="site-nav-mobile list">
+              <li><a href="./index.html" class="link site-studio-active">Studio</a></li>
+              <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+              <li><a href="" class="link ">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <address class=" navigation-nav-mobile ">
+            <ul class="list">
+              <li>
+                <a href="tel:+110001111111" class="link mobile-tel">+11 (000) 111-11-11</a>
+              </li>
+              <li>
+            </ul>
+          </address>
+         
+        </div>
+      </div>
+    </div>
+  </header> -->
