--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,243 @@
 .header{
   background-color: var(--color-black);
+  padding-top: 38px;
+    padding-bottom: 38px;
 }
+
+.list{
+    list-style: none;
+    font-style: normal;
+    padding: 0;
+    margin: 0;
+}
+.header-nav{
+    display: flex;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.header-address{
+color: var(--color-white);
+font-weight: 400;
+font-size: 9px;
+line-height:1.33;
+width: 100%;
+}
+
+
+.logo-text{
+color: var(--color-white);
+font-weight: 400;
+font-size: 15px;
+line-height: 1;
+letter-spacing: -0.03em;
+margin-right: 80px;
+}
+
+.site-nav{
+width: 100%;
+color: var(--color-white);
+font-weight: 400;
+font-size: 9px;
+line-height:1.33;
+display: flex;
+gap: 40px;
+}
+.button-address{
+  background-color: var(--color-dark-green);
+    cursor: pointer;
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.66;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    padding: 18px 36px;
+    margin-left:  162px;
+    transition: border var( --typical-transition);
+}
+.button-address:hover,
+.button-address:focus{
+border: 1px solid var( --color-white);
+}
+@media screen and (min-width: 1280px) {
+    .button-address{
+        margin-left:634px;
+    }  }
+
+@media screen and (max-width:768px) {
+    .site-nav {
+      display: none;
+    }
+  
+    .header-address {
+      display: none;
+    }
+    .button-address{
+        display: none;
+    }
+}  
+/*--------------------МОБІЛЬНЕ     ВІКНО   МОБІЛЬНЕ     ВІКНО  МОБІЛЬНЕ     ВІКНО  МОБІЛЬНЕ     ВІКНО  ---------------------------------------------*/
+@media screen and (min-width:768px) {
+
+    .mobile-menu-open-icon {
+      display: none;
+    }
+   .mobile-menu-open{
+    display: none;
+   }
+     .header-nav-mobile {
+      display: none;
+    }
+  
+    .mobile-menu {
+      display: none;
+    }
+  
+    .mobile-menu-container {
+      display: none;}
+    }
+    .mobile-menu-container{
+        position: relative;
+        width: 100%;
+        flex-direction: column;
+        padding-top: 35px;
+        padding-left: 20px;
+        padding-right: 26px;
+    }
+   
+    .header-nav-mobile {
+        display: flex;
+        align-items: center;
+        
+    }
+        
+    .mobile-menu-open {
+        height: 24px;
+        position: absolute;
+        background-color: var(--color-solid);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        right: 23px;
+        cursor: pointer;
+        fill: var( --color-white);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+   
+    .mobile-menu {
+        position: fixed;
+       width: 100%;
+        height: 100%;
+        z-index: 1000;
+        top: 0;
+        left: 0;
+        background-color: var(--color-dark-green);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        display: flex;
+      
+      }
+      .mobile-close {
+        position: absolute;
+        display: flex;
+        width: 24px;
+        height: 24px;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--color-solid);
+        right: 26px;
+        cursor: pointer;
+        stroke: var(--color-white);
+       }
+
+
+      .mobile-menu.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+      }
+      
+   
+      
+      .site-nav-mobile{
+        margin-top: 207px;
+      }
+      .site-nav-mobile .link {
+        display: flex;
+        justify-content: center;
+        font-weight: 400;
+       font-size: 14px;
+        line-height:1.29;
+       letter-spacing: -0.02em;
+       text-transform: uppercase;
+        text-transform: capitalize;
+        color: var( --color-white);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      gap:14px;
+     
+      }
+     
+      
+      .link {
+        text-decoration: none;
+        font-style: normal;
+      
+      }
+      
+      .navigation-nav-mobile {
+        width: 100%;
+        display: flex;
+        margin-bottom: 40px;
+      }
+      
+      /* .mobile-email:focus, .mobile-tel:focus {
+        color: var(--color-IRIS);
+        text-decoration: none;
+        font-style: normal;
+      }
+       */
+/*         
+      
+      .mobile-tel {
+        display: block;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        padding-bottom: 40px;
+        color: var(--color-IRIS);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      
+      .mobile-email {
+        display: block;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        color: var(--color-SLATE);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      
+      .container-icon-mobile {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 56px;
+        margin-bottom: 40px;
+      } */
+      
+      @media screen and (max-width:419px) {
+        .container-icon-mobile{
+          gap: 32px;
+        }
+        .mobile-tel{
+          font-size: 27px;}}
+   
+
+
+
+
+
+
+
+
+
