--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="footer-container container">
     <div class="footer-logo">
-      <a class="logo logo-bottom link" href="./index.html">
-        <svg class="logo-icon" width="40" height="40">
+      <a class="footer-logo-link" href="./index.html">
+        <svg class="footer-logo-icon" width="40" height="40">
           <use href="../img/icons.svg#icon-logo"></use>
         </svg>
       </a>
@@ -12,31 +12,31 @@
       <li><a href="">Catalog</a></li>
       <li><a href="">Sale</a></li>
     </ul>
-    <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+    <a class="phone-number" href="tel:+380684439426">+380 (68) 443-94-26</a>
     <p class="address">
       1678 S. Pioneer Road <br />
       Salt Lake <br />
       UT 84104
     </p>
-     <div class="footer-social-media">
-    <ul class="footer-social-media-list">
-      <li class="foot-network-item">
-        <a class="social-media-icon" href="">
-          <svg width="24" height="24">
+     <div class="footer-social">
+    <ul class="footer-social-list">
+      <li class="footer-social-item">
+        <a class="footer-social-link" href="">
+          <svg class="footer-social-icon" width="24" height="24">
             <use href="../img/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
-      <li class="foot-network-item">
-        <a class="network-icon" href="">
-          <svg width="24" height="24">
+      <li class="footer-social-item">
+        <a class="footer-social-link" href="">
+          <svg class="footer-social-icon" width="24" height="24">
             <use href="../img/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
-      <li class="foot-network-item">
-        <a class="network-icon" href="">
-          <svg class="social-icon" width="24" height="24">
+      <li class="footer-social-item">
+        <a class="footer-social-link" href="">
+          <svg class="footer-social-icon" width="24" height="24">
             <use href="../img/icons.svg#icon-youtube"></use>
           </svg>
         </a>
@@ -44,7 +44,7 @@
     </ul>
     <p class="copyright">©2022 The Watch Spot. All rights reserved.</p>
     <div class="privacy-terms">
-   <a href="">Privacy Policy</a><a href="">Terms of Service</a>
+   <a class="privacy-policy" href="">Privacy Policy</a><a class="terms" href="">Terms of Service</a>
     </div>
   </div>
 </footer>
