--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,14 +3,12 @@
     <div class="footer-logo">
       <a class="footer-logo-link" href="./index.html">
         <svg class="footer-logo-icon" width="40" height="40">
-          <use href="../img/icons.svg#icon-logo"></use>
+          <use href="./img/icons.svg#icon-logo"></use>
         </svg>
       </a>
     </div>
-    <ul class="footer-list">
-      <li><a href="">About us</a></li>
-      <li><a href="">Catalog</a></li>
-      <li><a href="">Sale</a></li>
+   <div class="footernav"></div>
+    sale.html">Sale</a></li>
     </ul>
     <a class="phone-number" href="tel:+380684439426">+380 (68) 443-94-26</a>
     <p class="address">
@@ -18,6 +16,7 @@
       Salt Lake <br />
       UT 84104
     </p>
+    вшмd
      <div class="footer-social">
     <ul class="footer-social-list">
       <li class="footer-social-item">
