--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,49 +1,63 @@
 <footer class="footer">
   <div class="footer-container container">
-    <div class="footer-logo">
-      <a class="footer-logo-link" href="./index.html">
-        <svg class="footer-logo-icon" width="40" height="40">
-          <use href="./img/icons.svg#icon-logo"></use>
-        </svg>
-      </a>
+    <a class="logo-link" href="./index.html">
+      <svg class="logo-link">
+        <use href="./img/icons.svg#icon-logo"></use>
+      </svg>
+    </a>
+    <div class="footer-information">
+      <address class="footer-contacts">
+        <ul class="contacts-list">
+          <li class="contact-item">
+            <a href="tel:+110001111111" class="contact-link text-m"
+              >+380 (68) 443-94-26
+            </a>
+          </li>
+          <li class="contact-item">
+            <!-- <a href=""></a> -->
+            <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
+          </li>
+        </ul>
+      </address>
+      <div class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="#about"></a>About</li>
+          <li class="footer-nav-item"><a href="#catalog">Catalog</a></li>
+          <li class="footer-nav-item"><a href="#sale">Sale</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon">
+                <use href="./img/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-   <div class="footernav"></div>
-    sale.html">Sale</a></li>
-    </ul>
-    <a class="phone-number" href="tel:+380684439426">+380 (68) 443-94-26</a>
-    <p class="address">
-      1678 S. Pioneer Road <br />
-      Salt Lake <br />
-      UT 84104
-    </p>
-    вшмd
-     <div class="footer-social">
-    <ul class="footer-social-list">
-      <li class="footer-social-item">
-        <a class="footer-social-link" href="">
-          <svg class="footer-social-icon" width="24" height="24">
-            <use href="../img/icons.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="footer-social-item">
-        <a class="footer-social-link" href="">
-          <svg class="footer-social-icon" width="24" height="24">
-            <use href="../img/icons.svg#icon-instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="footer-social-item">
-        <a class="footer-social-link" href="">
-          <svg class="footer-social-icon" width="24" height="24">
-            <use href="../img/icons.svg#icon-youtube"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <p class="copyright">©2022 The Watch Spot. All rights reserved.</p>
-    <div class="privacy-terms">
-   <a class="privacy-policy" href="">Privacy Policy</a><a class="terms" href="">Terms of Service</a>
+    <div class="footer-addition">
+      <p class="footer-rule">©2022 The Watch Spot. All rights reserved.</p>
+      <ul class="footer-inf">
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Service</a></li>
+      </ul>
     </div>
   </div>
 </footer>
