--- a/src/css/header.css
+++ b/src/css/header.css
@@ -20,14 +20,14 @@
 }
 
 .header-logo-link>img {
-  width: 14px;
-  height: 14px;
+ max-width: 14px;
+  max-height: 14px;
 }
 
 @media screen and (min-width: 768px) {
   .header-logo-link>img {
-    width: 19px;
-    height: 19px;
+    max-width: 19px;
+    max-height: 19px;
     
   }
 }
@@ -56,6 +56,7 @@
 }
 
 .header-nav {
+  position: relative;
   display: flex;
   align-items: center;
   padding-top: 0;
@@ -142,7 +143,6 @@
 }
 
 .mobile-menu-container {
-  position: relative;
   width: 100%;
   flex-direction: column;
   padding-top: 34px;
