--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,7 @@
     </nav>
     <button data-menu-open type="button" class="mobile-menu-open">
       <svg class="mobile-menu-open-icon" width="24" height="24">
-        <use href="../img/icons.svg#icon-mobile-menu"></use>
+        <use href="./img/icons.svg#icon-mobile-menu"></use>
       </svg>
     </button>
     <address class="header-address header-nav list">
@@ -21,7 +21,7 @@
     </address>
   </div>
   <div data-menu class="mobile-menu data-menu">
-    <div class="mobile-menu-container">
+    <div class="mobile-menu-container ">
       <div class="header-nav-mobile">
         <a class="header-logo-link" href="./index.html">
           <img src="./img/logo.svg" alt="the watcht spot logo" />
@@ -29,7 +29,7 @@
         </a>
         <button data-menu-close type="button" class="mobile-close">
           <svg width="24" height="24">
-            <use href="../img/icons.svg#icon-close"></use>
+            <use href="./img/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
