--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,10 +1,8 @@
 <section class="about section">
   <div class="about_container container">
-    <h1 class="visually-hidden"></h1>
     <div class="about_div">
       <div class="about_title_text">
         <h2 class="about_title">About us</h2>
-
         <ul class="about_list">
           <li class="about_item">
             <p class="about_text">
@@ -18,7 +16,7 @@
           <li class="about_item about_item_right">
             <p class="about_text">
               At our premium watch collection, we believe that a watch is more
-              than just a timekeeping device – it's a statement piece that
+              than just a timekeeping device - it's a statement piece that
               reflects your personality and style. So why settle for anything
               less than the best? Browse our collection today and discover the
               perfect watch for you.
@@ -26,13 +24,6 @@
           </li>
         </ul>
       </div>
-
-      <img
-        src="./img/about_us/watchspot.gif"
-        alt="watches"
-        width="335px"
-        height="365px"
-      />
     </div>
   </div>
 </section>
