--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,38 +1,37 @@
-.about {}
-
-.section {}
-
-.about_container {
-
-
-}
-
-.container {}
-
 .about_div {
     display: flex;
     flex-direction: column;
-    gap: 40px;
 }
 
 .about_title_text {
     display: flex;
     flex-direction: column;
-    gap:40px;
+    gap: 40px;
+}
+
+.about_div::after {
+    content: "";
+    margin-top: 40px;
+    max-width: 100%;
+    height: 365px;
+    background-image: url(/img/about_us/watchspot.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .about_title {
-font-weight: 600;
-font-size: 32px;
-line-height: 1.25;
-letter-spacing: -0.02em;
-color: v(--color-dark-green);
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1.25;
+    letter-spacing: -0.02em;
+    color: var(--color-dark-green);
 }
 
 .about_list {
     display: flex;
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
 }
 
 .about_item {
@@ -40,72 +39,64 @@ color: v(--color-dark-green);
 }
 
 .about_text {
-font-weight: 300;
-font-size: 14px;
-line-height: 1.29; 
-letter-spacing: -0.02em;
-color: var(--color-black);
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+    color: var(--color-black);
 }
 
 /* -------------min-width: 768px------------ */
 @media screen and (min-width: 768px) {
 
-.about_title_text {
-        display: flex;
-         flex-direction: row; 
-        gap: 40px;
+    .about_title_text {
+        flex-direction: row;
     }
 
-        .about_list {
-            display: flex;
-            flex-direction: row;
-            gap: 20px;}
+    .about_div::after {
+        height: 465px;
+    }
 
-.about_title {
-    
-    font-size: 40px;
-    line-height: 1.10;
-    letter-spacing: -0.02em;
-    color: v(--color-dark-green);
-}
-            
-        .about_item {
-            max-width:220px;
-}
-.about_item_right{
-    max-width: 250px;
-}
-.about_div > img{
-    width: 704px;
-    height: 465px;
-}
+    .about_list {
+        flex-direction: row;
+    }
 
+    .about_title {
+        font-size: 40px;
+        line-height: 1.10;
+    }
+
+    .about_item {
+        max-width: 220px;
+    }
+
+    .about_item_right {
+        max-width: 250px;
+    }
 }
-/* ----------------------------- */
 
 /* -------------min-width: 1280px------------ */
 @media screen and (min-width: 1280px) {
 
-.about_item {
-  max-width: 439px; 
-            }
-.about_item_right {
-    max-width: 380px;
-}
+    .about_item {
+        max-width: 439px;
+    }
 
-    
-.about_title_text {
-   margin-bottom: 40px;
-    gap: 110px;
+    .about_item_right {
+        max-width: 380px;
+    }
 
-}
-.about_div>img {
-    width: 892px;
-    height: 500px;
-    margin-left: auto;
-}
-.about_div{
-  display: block;  
+    .about_title_text {
+        gap: 110px;
+    }
 
-}
+    .about_list {
+        gap: 40px;
+    }
+
+    .about_div::after {
+        margin-left: auto;
+        height: 500px;
+        width: 892px;
+    }
 }
