--- a/src/css/about.css
+++ b/src/css/about.css
@@ -46,7 +46,8 @@
     color: var(--color-black);
 }
 
-
+/* Переопределяем путь к 2x изображению
+   если плотность экрана как минимум 2 */
 @media (min-device-pixel-ratio: 2),
 (-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
