--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
     <div class="footer-information">
       <address class="footer-contacts">
         <ul class="contacts-list">
-          <li class="contact-item phone-number">
+          <li class="contact-item">
             <a href="tel:+110001111111" class="contact-link text-m"
               >+380 (68) 443-94-26
             </a>
