--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,11 @@
 <header class="header">
   <div class="header-nav container">
-    <nav class="header-nav ">
-      <a class="header-logo-link" href="./index.html">
-        <img src="./img/logo.svg" alt="the watcht spot logo" />
-        <span class="header-logo-text">thewatchspot</span>
-      </a>
+    <nav class="header-nav">
+      <a class="header-logo-link" href="./index.html">thewatchspot</a>
       <ul class="site-nav list">
-        <li><a href="#ABOUTUS">ABOUT US</a></li>
-        <li><a href="#CATALOG">CATALOG</a></li>
-        <li><a href="#SALE">SALE</a></li>
+        <li><a href="#about">About us</a></li>
+        <li><a href="#catalog">Catalog</a></li>
+        <li><a href="#sale">Sale</a></li>
       </ul>
     </nav>
     <button data-menu-open type="button" class="mobile-menu-open">
@@ -21,12 +18,9 @@
     </address>
   </div>
   <div data-menu class="mobile-menu data-menu">
-    <div class="mobile-menu-container ">
+    <div class="mobile-menu-container container">
       <div class="header-nav-mobile">
-        <a class="header-logo-link" href="./index.html">
-          <img src="./img/logo.svg" alt="the watcht spot logo" />
-          <span class="header-logo-text">thewatchspot</span>
-        </a>
+        <a class="header-logo-link" href="./index.html">thewatchspot</a>
         <button data-menu-close type="button" class="mobile-close">
           <svg width="24" height="24">
             <use href="./img/icons.svg#icon-close"></use>
@@ -35,9 +29,9 @@
       </div>
       <nav>
         <ul class="site-nav-mobile list">
-          <li><a class="link" href="#ABOUTUS">ABOUTUS</a></li>
-          <li><a class="link" href="#CATALOG">CATALOG</a></li>
-          <li><a class="link" href="#SALE">SALE</a></li>
+          <li><a href="#about">About us</a></li>
+          <li><a href="#catalog">Catalog</a></li>
+          <li><a href="#sale">Sale</a></li>
         </ul>
       </nav>
     </div>
