--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,83 +1,66 @@
 .header {
   background-color: var(--color-black);
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-@media screen and (max-width:768px) {
-  .header {
-    padding-top: 34px;
-    padding-bottom: 34px;
-  }
-}
-
-
-.header-logo-link {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  margin-right: 80px;
-}
-
-.header-logo-link>img {
- max-width: 14px;
-  max-height: 14px;
-}
-
-@media screen and (min-width: 768px) {
-  .header-logo-link>img {
-    max-width: 19px;
-    max-height: 19px;
-    
-  }
-}
-
-.header-logo-text {
-  padding-top: 1px;
-  padding-bottom: 1px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.0;
-  letter-spacing: -0.03em;
   color: var(--color-white);
+  padding-top: 34px;
+  padding-bottom: 34px;
 }
 
 @media screen and (min-width: 768px) {
-  .header-logo-text {
-    font-size: 15px;
+  .header {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
-}
-
-.list {
-  list-style: none;
-  font-style: normal;
-  padding: 0;
-  margin: 0;
 }
 
 .header-nav {
   position: relative;
   display: flex;
   align-items: center;
-  padding-top: 0;
-  padding-bottom: 0;
+  width: 100%;
 }
 
-.header-address {
-  color: var(--color-white);
+.header-logo-link {
+  display: flex;
+  align-items: center;
+  gap: 4px;
 
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.0;
+  letter-spacing: -0.03em;
 }
 
+.header-logo-link::before {
+  display: block;
+  content: "";
+  width: 14px;
+  height: 14px;
+  background-size: contain;
+  background-image: url("/img/logo.svg")
+}
+
+@media screen and (min-width: 768px) {
+  .header-logo-link {
+    margin-right: 80px;
+    font-size: 15px;
+  }
+
+  .header-logo-link::before {
+    width: 19px;
+    height: 19px;
+  }
+}
 
 .site-nav {
-  width: 100%;
-  color: var(--color-white);
+  width: 180px;
   font-weight: 400;
   font-size: 9px;
   line-height: 1.33;
+  text-transform: uppercase;
   display: flex;
   gap: 40px;
 }
+
 
 .button-address {
   background-color: var(--color-dark-green);
@@ -85,23 +68,17 @@
   font-family: inherit;
   font-weight: 400;
   font-size: 9px;
-  line-height: 1.66;
+  line-height: 1.33;
   border: 1px solid transparent;
   border-radius: 8px;
-  padding: 18px 36px;
-  margin-left: 162px;
+  padding: 18px 35px;
+  margin-left: auto;
   transition: border var(--typical-transition);
 }
 
 .button-address:hover,
 .button-address:focus {
   border: 1px solid var(--color-white);
-}
-
-@media screen and (min-width: 1280px) {
-  .button-address {
-    margin-left: 634px;
-  }
 }
 
 @media screen and (max-width:768px) {
@@ -118,9 +95,26 @@
   }
 }
 
+.mobile-menu-open {
+  height: 24px;
+  line-height: 0;
+  position: absolute;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  right: 23px;
+  cursor: pointer;
+  fill: var(--color-white);
+  transition: fill var(--typical-transition);
+}
+
+.mobile-menu-open:hover,
+.mobile-menu-open:focus {
+  fill: var(--color-white-alpha);
+}
+
 /*--------------------МОБІЛЬНЕ     ВІКНО   МОБІЛЬНЕ     ВІКНО  МОБІЛЬНЕ     ВІКНО  МОБІЛЬНЕ     ВІКНО  ---------------------------------------------*/
 @media screen and (min-width:768px) {
-
   .mobile-menu-open-icon {
     display: none;
   }
@@ -146,27 +140,13 @@
   width: 100%;
   flex-direction: column;
   padding-top: 34px;
-  padding-left: 20px;
-  padding-right: 26px;
-  
+  padding-bottom: 34px;
 }
 
 .header-nav-mobile {
   display: flex;
-  align-items: center;
-
-}
-
-.mobile-menu-open {
-  height: 24px;
-  position: absolute;
-  background-color: var(--color-solid);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  right: 23px;
-  cursor: pointer;
-  fill: var(--color-white);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  justify-content: space-between;
+  position: relative;
 }
 
 .mobile-menu {
@@ -177,75 +157,60 @@
   top: 0;
   left: 0;
   background-color: var(--color-dark-green);
+  transform: translateY(-100%);
+  transition: transform var(--typical-transition);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: flex;
 }
 
 .mobile-close {
-  position: absolute;
   display: flex;
-  width: 24px;
-  height: 24px;
   justify-content: center;
   align-items: center;
-  background-color: var(--color-solid);
-  right: 26px;
+  background-color: transparent;
   cursor: pointer;
   stroke: var(--color-white);
+  transition: stroke var(--typical-transition);
 }
 
+.mobile-close:hover,
+.mobile-close:focus {
+  stroke: var(--color-white-alpha);
+}
 
 .mobile-menu.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+  transform: translateY(0);
 }
-
-
 
 .site-nav-mobile {
-  margin-top: 207px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.site-nav-mobile .link {
+.site-nav-mobile {
   display: flex;
-  justify-content: center;
+  gap: 14px;
+  flex-direction: column;
+  align-items: center;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.02em;
   text-transform: uppercase;
-  text-transform: capitalize;
   color: var(--color-white);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  gap: 14px;
-
 }
 
-
-.link {
-  text-decoration: none;
-  font-style: normal;
-
+.site-nav-mobile a {
+  transition: color var(--typical-transition);
 }
 
-.navigation-nav-mobile {
-  width: 100%;
-  display: flex;
-  margin-bottom: 40px;
-}
-
-
-
-@media screen and (max-width:419px) {
-  .container-icon-mobile {
-    gap: 32px;
-  }
-
-  .mobile-tel {
-    font-size: 27px;
-  }
+.site-nav-mobile a:hover,
+.site-nav-mobile a:focus {
+  color: var(--color-white-alpha);
 }
