--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -12,12 +12,31 @@
   .footer-information {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 152px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer-information {
+    margin-bottom: 174px;
   }
 }
 
 .logo-link {
+  display: inline-block;
+  margin-bottom: 40px;
+}
+
+.logo-link>img {
   width: 40px;
   height: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-link>img {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .footer-contacts {
@@ -27,6 +46,26 @@
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.02em;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-contacts {
+    max-width: 180px;
+    font-size: 18px;
+    line-height: 1.33;
+  }
+}
+
+.contact-item>a {
+  transition: color var(--typical-transition);
+}
+
+.contact-item:first-child {
+  margin-bottom: 20px;
+}
+
+.contact-item>a:hover {
+  color: var(--color-white-alpha);
 }
 
 @media screen and (max-width: 767px) {
@@ -48,12 +87,28 @@
   text-transform: uppercase;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-nav-list {
+    font-size: 18px;
+    line-height: 1.33;
+  }
+}
+
+
 @media screen and (max-width: 767px) {
   .footer-nav-list {
     position: absolute;
     top: 0;
     right: 20px;
   }
+}
+
+.footer-nav-item>a {
+  transition: color var(--typical-transition);
+}
+
+.footer-nav-item>a:hover {
+  color: var(--color-white-alpha);
 }
 
 .footer-social-list {
@@ -71,11 +126,29 @@
 .footer-social-item {
   position: relative;
 
-  width: 40px;
-  height: 40px;
-
   border: 1px solid var(--color-border-alpha);
   border-radius: 10px;
+}
+
+.footer-social-link {
+  display: flex;
+  width: 40px;
+  height: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-social-link {
+    width: 44px;
+    height: 44px;
+  }
+}
+
+.footer-social-link .footer-social-icon {
+  transition: fill var(--typical-transition);
+}
+
+.footer-social-link:hover .footer-social-icon {
+  fill: var(--color-white-alpha);
 }
 
 .footer-social-icon {
@@ -90,18 +163,41 @@
   fill: var(--color-white);
 }
 
+@media screen and (min-width: 768px) {
+  .footer-social-icon {
+    width: 28px;
+    height: 28px;
+  }
+}
+
 .footer-addition {
   color: rgba(198, 205, 209, 1);
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.66;
+  line-height: 1.16;
   letter-spacing: -0.02em;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-addition {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .footer-addition {
     display: flex;
     justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-rule {
+    display: flex;
+    margin-bottom: 14px;
   }
 }
 
