--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,31 +1,32 @@
 <footer class="footer">
   <div class="footer-container container">
-    <a class="logo-link" href="./index.html">
-      <svg class="logo-link">
-        <use href="./img/icons.svg#icon-logo"></use>
-      </svg>
-    </a>
     <div class="footer-information">
-      <address class="footer-contacts">
-        <ul class="contacts-list">
-          <li class="contact-item">
-            <a href="tel:+110001111111" class="contact-link text-m"
-              >+380 (68) 443-94-26
-            </a>
-          </li>
-          <li class="contact-item">
-            <!-- <a href=""></a> -->
-            <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
-          </li>
-        </ul>
-      </address>
-      <div class="footer-nav">
+      <div class="footer-thumb">
+        <a class="logo-link" href="./index.html">
+          <img src="./img/logo.svg" alt="logo the watch spot" />
+        </a>
+        <address class="footer-contacts">
+          <ul class="contacts-list">
+            <li class="contact-item">
+              <a href="tel:+110001111111" class="contact-link text-m"
+                >+380 (68) 443-94-26
+              </a>
+            </li>
+            <li class="contact-item">
+              <a href="https://goo.gl/maps/XPoyqgcRH2rPFNfK8"
+                >1678 S. Pioneer Road Salt Lake City UT 84104</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+      <nav class="footer-nav">
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="#about"></a>About</li>
+          <li class="footer-nav-item"><a href="#about">About</a></li>
           <li class="footer-nav-item"><a href="#catalog">Catalog</a></li>
           <li class="footer-nav-item"><a href="#sale">Sale</a></li>
         </ul>
-      </div>
+      </nav>
       <div class="footer-social">
         <ul class="footer-social-list">
           <li class="footer-social-item">
