--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,6 +2,7 @@
   <div class="about_container container">
     <div class="about_div">
       <div class="about_title_text">
+        <h1 id="about" class="visually-hidden"></h1>
         <h2 class="about_title">About us</h2>
         <ul class="about_list">
           <li class="about_item">
