--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,6 +1,6 @@
 <section class="sale-section section">
   <div class="sale-container container">
-    <h2 class="sale-title">Sale</h2>
+    <h2 id="sale" class="sale-title">Sale</h2>
     <div class="extra-sale-container">
       <div class="sale-list-container">
         <ul class="sale-list">
