--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,6 +4,19 @@
   background-color: var(--color-dark-green);
 }
 
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 80px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    padding-top: 104px;
+    padding-bottom: 32px;
+  }
+}
+
 .footer-container {
   position: relative;
 }
