--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -1,4 +1,5 @@
 :root {
+    --background-color: rgb(251, 251, 251);
     --color-dark-green: rgb(30, 40, 39);
     --color-black: rgb(20, 20, 20);
     --color-grey: rgba(198, 205, 209, 1);
