--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,54 +5,54 @@
     </div>
     <div class="hero_swiper_images-div">
       <div class="hero_div">
-        <!-- ------------------ -->
+        <!--======Swiper======-->
         <div class="hero_swiper-div">
           <div class="hero_swiper">
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <img
-                    srcset="../img/slider-mobile/slider-model1-mobile@2x.png"
+                    srcset="./img/slider-mobile/slider-model1-mobile@2x.png"
                     src="./img/slider-mobile/slider-model1-mobile.png"
                     alt="watches"
-                    width="226px"
-                    height="190px"
+                    width="226"
+                    height="190"
                   />
                 </div>
                 <div class="swiper-slide">
                   <img
-                    srcset="../img/slider-mobile/slider-model2-mobile@2x.png"
+                    srcset="./img/slider-mobile/slider-model2-mobile@2x.png"
                     src="./img/slider-mobile/slider-model2-mobile.png"
                     alt="watches"
-                    width="226px"
-                    height="190px"
+                    width="226"
+                    height="190"
                   />
                 </div>
                 <div class="swiper-slide">
                   <img
-                    srcset="../img/slider-mobile/slider-model3-mobile@2x.png"
+                    srcset="./img/slider-mobile/slider-model3-mobile@2x.png"
                     src="./img/slider-mobile/slider-model3-mobile.png"
                     alt="watches"
-                    width="226px"
-                    height="190px"
+                    width="226"
+                    height="190"
                   />
                 </div>
                 <div class="swiper-slide">
                   <img
-                    srcset="../img/slider-mobile/slider-model4-mobile@2x.png"
+                    srcset="./img/slider-mobile/slider-model4-mobile@2x.png"
                     src="./img/slider-mobile/slider-model4-mobile.png"
                     alt="watches"
-                    width="226px"
-                    height="190px"
+                    width="226"
+                    height="190"
                   />
                 </div>
                 <div class="swiper-slide">
                   <img
-                    srcset="../img/slider-mobile/slider-model3-mobile@2x.png"
+                    srcset="./img/slider-mobile/slider-model3-mobile@2x.png"
                     src="./img/slider-mobile/slider-model3-mobile.png"
                     alt="watches"
-                    width="226px"
-                    height="190px"
+                    width="226"
+                    height="190"
                   />
                 </div>
               </div>
@@ -74,7 +74,7 @@
             </div>
           </div>
         </div>
-        <!-- ---------------- -->
+        <!--======Swiper======-->
         <p class="hero_text">
           Our watches are not just timepieces, but also an expression of your
           personality and lifestyle. From classic designs to modern ones, we
