--- a/src/partials/watches.html
+++ b/src/partials/watches.html
@@ -20,28 +20,27 @@
           <picture>
             <source
               srcset="
-                ../img/new_watches/new-green-model.jpg    1x,
-                ../img/new_watches/new-green-model@2x.jpg 2x
+                ./img/new_watches/new-green-model.jpg    1x,
+                ./img/new_watches/new-green-model@2x.jpg 2x
               "
               media="(min-width: 1200px)"
             />
             <source
               srcset="
-                ../img/new_watches/new-green-model-tablet.jpg    1x,
-                ../img/new_watches/new-green-model-tablet@2x.jpg 2x
+                ./img/new_watches/new-green-model-tablet.jpg    1x,
+                ./img/new_watches/new-green-model-tablet@2x.jpg 2x
               "
               media="(min-width: 768px)"
             />
 
             <source
               srcset="
-                ../img/new_watches/new-green-model-mobile.jpg    1x,
-                ../img/new_watches/new-green-model-mobile@2x.jpg 2x
+                ./img/new_watches/new-green-model-mobile.jpg    1x,
+                ./img/new_watches/new-green-model-mobile@2x.jpg 2x
               "
-              media="(min-width: 375px)"
             />
             <img
-              src="../img/new_watches/new-green-model-mobile.jpg"
+              src="./img/new_watches/new-green-model-mobile.jpg"
               alt="Green model"
             />
           </picture>
@@ -49,27 +48,26 @@
           <picture>
             <source
               srcset="
-                ../img/new_watches/new-black-model.jpg    1x,
-                ../img/new_watches/new-black-model@2x.jpg 2x
+                ./img/new_watches/new-black-model.jpg    1x,
+                ./img/new_watches/new-black-model@2x.jpg 2x
               "
               media="(min-width: 1200px)"
             />
             <source
               srcset="
-                ../img/new_watches/new-black-model-tablet.jpg    1x,
-                ../img/new_watches/new-black-model-tablet@2x.jpg 2x
+                ./img/new_watches/new-black-model-tablet.jpg    1x,
+                ./img/new_watches/new-black-model-tablet@2x.jpg 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                ../img/new_watches/new-black-model-mobile.jpg    1x,
-                ../img/new_watches/new-black-model-mobile@2x.jpg 2x
+                ./img/new_watches/new-black-model-mobile.jpg    1x,
+                ./img/new_watches/new-black-model-mobile@2x.jpg 2x
               "
-              media="(min-width: 1200px)"
             />
             <img
-              src="../img/new_watches/new-black-model-mobile.jpg"
+              src="./img/new_watches/new-black-model-mobile.jpg"
               alt="Black model"
             />
           </picture>
