--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -87,7 +87,7 @@
         srcset="./img/hero/hero@2x.jpg"
         src="./img/hero/hero-mobile.jpg"
         alt="hend with wrist watch"
-        width="335px"
+        width="335"
       />
     </div>
   </div>
