--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section catalog-watch">
   <div class="container">
     <h2 class="catalog-box-title">Catalog</h2>
     <ul class="catalog-list">
