--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,5 +1,4 @@
 /* ================================ flip-card ==============================*/
-
 .flip-card-inner {
     transition: transform 0.8s;
     transform-style: preserve-3d;
@@ -62,14 +61,7 @@
     letter-spacing: -0.02em;
     color: var(--color-black-alpha);
 }
-.catalog-button{
-    display: block;
-    text-transform: uppercase;
-    padding: 14px 28px;
-    background-color: var(--color-dark-green);
-    color: var(--color-white);
-    margin-left: auto;
-}
+
 /* ================================ mobile style ==============================*/
 @media screen and (max-width: 1279px){
     .model-watch{
@@ -89,7 +81,7 @@
 .flip-card-back {
     background-color: var(--color-dark-green);
     color: white;
-    max-width: 335px;
+    max-width: 336px;
     height: 360px;
     top: 0;
     left: 0;
@@ -104,6 +96,18 @@
     margin: 0;
     gap: 40px 0px;
         }
+    .catalog-button{
+    display: block;
+    margin-left: auto;
+    padding: 14px 28px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0;
+    text-transform: uppercase;
+    background-color: var(--color-dark-green);
+    color: var(--color-white);
+}
 }
 @media screen and (min-width: 320px){
     .card-back-content{
@@ -136,6 +140,18 @@
     line-height: 1.1;
     letter-spacing: -0.02em;
     margin-bottom: 40px;
+}
+    .catalog-button{
+    display: block;
+    margin-left: auto;
+    padding: 18px 35px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0;
+    text-transform: uppercase;
+    background-color: var(--color-dark-green);
+    color: var(--color-white);
 }
 }
 /* ================================ desktop style ==============================*/
