--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -563,6 +563,6 @@
         </div>
       </li>
     </ul>
-    <button type="button" class="catalog-button" js-open-modal>Buy now</button>
+    <button type="button" class="js-open-modal catalog-button">Buy now</button>
   </div>
 </section>
