catalog fix title

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,6 +1,6 @@
 <section class="section catalog-watch">
   <div class="container">
-    <h2 class="catalog-box-title">Catalog</h2>
+    <h2 id="catalog" class="catalog-box-title">Catalog</h2>
     <ul class="catalog-list">
       <!-- watch model 1-->
       <li class="content-item">
