--- a/src/partials/popup.html
+++ b/src/partials/popup.html
@@ -8,8 +8,8 @@
     </button>
     <div class="modal-card">
       <img
-        srcset="../img/modal/watch2.jpg 1x, ../img/modal/watch3.jpg 2x"
-        src="../img/modal/watch1.jpg"
+        srcset="../img/modal/watch1.jpg 1x, ../img/modal/watch@2x.jpg 2x"
+        src="../img/modal/watch.jpg"
         alt="watch"
         class="modal-img"
         width="276"
