--- a/src/partials/popup.html
+++ b/src/partials/popup.html
@@ -3,13 +3,16 @@
   <div class="modal">
     <button type="button" class="modal-btn-close" data-modal-close>
       <svg class="modal-icon" width="20" height="20">
-        <use href="./img/modal/btn-close.svg#icon-btn-close"></use>
+        <use href="./img/icons.svg#icon-close"></use>
       </svg>
     </button>
     <div class="modal-card">
       <img
-        srcset="./img/modal/watch1.jpg 1x, ./img/modal/watch@2x.jpg 2x"
-        src="./img/modal/watch.jpg"
+        srcset="
+          ./img/catalog/catalog-model1.png    1x,
+          ./img/catalog/catalog-model1@2x.png 2x
+        "
+        src="./img/catalog/catalog-model1.png"
         alt="watch"
         class="modal-img"
         width="276"
@@ -73,3 +76,4 @@
   </div>
 </div>
 <script src="./js/modal.js"></script>
+<script src="./js/mobile-menu.js"></script>
